update mesos command

--- a/data/cluster/mesos.yaml
+++ b/data/cluster/mesos.yaml
@@ -1,10 +1,10 @@
 commands: ['export HOST_IP=`ifconfig eth0 | awk ''{ print $2}'' | grep -E -o "([0-9]{1,3}[\.]){3}[0-9]{1,3}"`',
-  'docker run -d -p 2181:2181 -p 2888:2888 -p 3888:3888 garland/zookeeper', 'docker
-    run --net="host" -p 5050:5050 -e "MESOS_HOSTNAME=${HOST_IP}" -e "MESOS_IP=${HOST_IP}"
-    -e "MESOS_ZK=zk://${HOST_IP}:2181/mesos" -e "MESOS_PORT=5050" -e "MESOS_LOG_DIR=/var/log/mesos"
+  '/usr/bin/docker run -d -p 2181:2181 -p 2888:2888 -p 3888:3888 garland/zookeeper', '/usr/bin/docker
+    run --net="host" -p 5050:5050 -e "MESOS_HOSTNAME=$private_ipv4" -e "MESOS_IP=$private_ipv4"
+    -e "MESOS_ZK=zk://$private_ipv4:2181/mesos" -e "MESOS_PORT=5050" -e "MESOS_LOG_DIR=/var/log/mesos"
     -e "MESOS_QUORUM=1" -e "MESOS_REGISTRY=in_memory" -e "MESOS_WORK_DIR=/var/lib/mesos"
-    -d garland/mesosphere-docker-mesos-master', 'docker run -d -p 8080:8080 garland/mesosphere-docker-marathon
-    --master zk://${HOST_IP}:2181/mesos --zk zk://${HOST_IP}:2181/marathon', 'docker
-    run -d --name mesos_slave_1 --entrypoint="mesos-slave" -e "MESOS_MASTER=zk://${HOST_IP}:2181/mesos"
+    -d garland/mesosphere-docker-mesos-master', '/usr/bin/docker run -d -p 8080:8080 garland/mesosphere-docker-marathon
+    --master zk://$private_ipv4:2181/mesos --zk zk://$private_ipv4:2181/marathon', '/usr/bin/docker
+    run -d --name mesos_slave_1 --entrypoint="mesos-slave" -e "MESOS_MASTER=zk://$private_ipv4:2181/mesos"
     -e "MESOS_LOG_DIR=/var/log/mesos" -e "MESOS_LOGGING_LEVEL=INFO" garland/mesosphere-docker-mesos-master:latest']
 dependency: docker
